[project]
name = "sneact"
version = "0.1.0"
description = "Sneact is a python library for building user interfaces"
readme = "readme.md"
authors = [{ name = "Kiselev Nikolay", email = "ceo@machineand.me" }]
keywords = ["html", "web", "drs", "sneact", "jsless", "frontend"]
classifiers = [
	"Development Status :: 1 - Planning",
	"Intended Audience :: Developers",
	"Topic :: Internet :: WWW/HTTP :: Dynamic Content",
	"Topic :: Religion",
	"Topic :: Software Development :: Libraries",
	"Topic :: Text Processing :: Markup :: HTML",
]
license = "MIT"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://machineand.me/sneact?f=pypi"
Repository = "https://github.com/machineandme/sneact"

[dependency-groups]
dev = [
	"pytest>=8",
	"black>=24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sneact"]
